gateway-grpc/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc
  labels:
    app: grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc
  template:
    metadata:
      labels:
        app: grpc
      annotations:
        sidecar.istio.io/logLevel: debug
        inject.istio.io/templates: grpc-agent
        proxy.istio.io/config: '{"holdApplicationUntilProxyStarts": true}'
    spec:
      serviceAccountName: grpc
      containers: [{name: grpc, image: 'seemscloud/grpc-server:latest', imagePullPolicy: Always, securityContext: {runAsNonRoot: true, runAsGroup: 1000, runAsUser: 1000}, ports: [{containerPort: 9000}, {containerPort: 9443}], env: [{name: LISTEN_PORT, value: '9000'}, {name: LISTEN_PORT_TLS, value: '9443'}, {name: GRPC_VERBOSITY, value: DEBUG}, {name: GRPC_TRACE, value: all}]}]
---
apiVersion: v1
kind: Service
metadata:
  name: grpc
spec:
  type: ClusterIP
  selector:
    app: grpc
  ports: [{name: grpc, appProtocol: grpc, protocol: TCP, port: 9000, targetPort: 9000}]
